force-app/main/default/objects/OMDbSetting__mdt/OMDbSetting__mdt.object-meta.xml
<CustomObject>
    <label>OMDb Setting</label>
    <pluralLabel>OMDbSettings</pluralLabel>
</CustomObject>