force-app/main/default/objects/OMDbSetting__mdt/fields/HostData__c.field-meta.xml
<CustomField>
    <fullName>HostData__c</fullName>
    <label>Host Data</label>
    <length>255</length>
    <type>Text</type>
</CustomField>