force-app/main/default/objects/OMDbSetting__mdt/fields/HostImages__c.field-meta.xml
<CustomField>
    <fullName>HostImages__c</fullName>
    <label>Host Images</label>
    <length>255</length>
    <type>Text</type>
</CustomField>