force-app/main/default/objects/OMDbSetting__mdt/fields/IsSandbox__c.field-meta.xml
<CustomField>
    <fullName>IsSandbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsSandbox</label>
    <type>Checkbox</type>
</CustomField>